--- a/app/src/main/res/layout/activity_hitung.xml
+++ b/app/src/main/res/layout/activity_hitung.xml
@@ -12,6 +12,15 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="10dp"/>
+    <EditText
+        android:id="@+id/tglTrx"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:inputType="text"
+        android:layout_marginBottom="5dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:hint="Tanggal Transaksi"/>
 
     <EditText
         android:id="@+id/NamaCust"
@@ -21,7 +30,8 @@
         android:inputType="text"
         android:layout_marginBottom="5dp"
         android:background="@android:drawable/editbox_background_normal"
-        android:hint="Nama Customer" />
+        android:hint="Nama Customer"
+        android:layout_below="@+id/tglTrx"/>
     <EditText
         android:id="@+id/StsSer"
         android:layout_width="match_parent"
@@ -77,7 +87,7 @@
         android:padding="10dp"
         android:inputType="text"
         android:background="@android:drawable/editbox_background_normal"
-        android:hint="Status IMB"
+        android:hint="Harga"
         android:layout_below="@+id/StsImb"/>
 
 
@@ -89,7 +99,6 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
         android:text="simpan"
-        android:textColor="#fff"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="456dp" />
 
